--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
